Panel - fix z-index

--- a/stylesheets/_panel.scss
+++ b/stylesheets/_panel.scss
@@ -9,6 +9,7 @@
   border: $panel-border;
   border-radius: $panel-border-radius;
   margin: 0;
+  z-index: 9998;
 
   .next-shortcuts-arrow,
   .prev-shortcuts-arrow {
